10-critical-css-solution-bonus

--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
     "build:scripts": "node tasks/scripts.js",
     "build:styles": "node tasks/styles.js",
     "prebuild": "rimraf dist/optimised/ && npm run copy:optimised",
-    "postbuild": "npm run revision",
+    "postbuild": "npm-run-all --sequential critical revision",
     "copy:original": "mkdirp dist/original/ && ncp src/original/ dist/original/",
     "copy:optimised": "mkdirp dist/optimised/ && ncp src/optimised/ dist/optimised/",
+    "critical": "node tasks/critical.js",
     "revision": "node tasks/revision-hash.js && node tasks/revision-replace.js",
     "watch": "npm-run-all --parallel watch:*",
     "watch:html": "chokidar 'src/optimised/**/*.html' --command 'npm run build:html'",
