--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "build:scripts": "node tasks/scripts.js",
     "build:styles": "node tasks/styles.js",
     "prebuild": "rimraf dist/optimised/ && npm run copy:optimised",
-    "postbuild": "npm-run-all --sequential critical revision",
+    "postbuild": "npm-run-all --sequential critical revision compress",
+    "compress": "node tasks/compress.js",
     "copy:original": "mkdirp dist/original/ && ncp src/original/ dist/original/",
     "copy:optimised": "mkdirp dist/optimised/ && ncp src/optimised/ dist/optimised/",
     "critical": "node tasks/critical.js",
