--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "gulp-rev-replace": "0.4.3",
     "gulp-uglify": "2.0.0",
     "gulp-wrap": "0.13.0",
+    "lighthouse-ci": "git+https://github.com/ebidel/lighthouse-ci.git",
     "mime": "1.3.4",
     "mkdirp": "0.5.1",
     "ncp": "2.0.0",
