--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,20 @@
-sudo: false
 dist: trusty
+sudo: required
 
 language: node_js
 node_js:
   - 8
+
+before_install:
+  - sudo apt install -y xsel
 
 install:
   - npm install
   - npm install --global now
 
 after_success:
-  - now --public --no-clipboard --alias masterclass-$TRAVIS_PULL_REQUEST --token $NOW_TOKEN
-  - node node_modules/lighthouse-ci/runlighthouse.js https://masterclass-$TRAVIS_PULL_REQUEST.now.sh
+  - now deploy --public --token $NOW_TOKEN
+  - NOW_URL=$(xsel --clipboard)
+  - echo $NOW_URL
+  - node node_modules/lighthouse-ci/runlighthouse.js $NOW_URL
+  - now rm --token $NOW_TOKEN $NOW_URL
