Fix travis config

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
-sudo: false
 dist: trusty
+sudo: false
 
 language: node_js
 node_js:
@@ -13,4 +13,4 @@ after_success:
   - NOW_URL=$(now deploy --public --token $NOW_TOKEN | egrep -o 'https?://[^ ]+')
   - echo $NOW_URL
   - node node_modules/lighthouse-ci/runlighthouse.js $NOW_URL
-  - now rm --token $NOW_TOKEN $NOW_URL
+  - now remove -y --token $NOW_TOKEN $NOW_URL
