--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,6 @@ install:
   - npm install --global now
 
 after_success:
-  - NOW_URL=$(now deploy --public --token $NOW_TOKEN | egrep -o 'https?://[^ ]+')
-  - echo $NOW_URL
+  - NOW_URL=$(now deploy --public --name performance-masterclass --token $NOW_TOKEN | egrep -o 'https?://[^ ]+')
   - node node_modules/lighthouse-ci/runlighthouse.js $NOW_URL
   - now remove -y --token $NOW_TOKEN $NOW_URL
